# poc-rag-chatbot-wiki

./: .containerignore  .dockerignore  .env.example  .gitignore  Containerfile  LICENSE  Makefile  QUICKSTART.md  README.md  STRUCTURE.md  app.py  check_import.py  custom_requirements.txt  debug_graph_extraction.py  debug_ollama.py  docker-compose.yml  example_usage.py  main.py  podman-compose.yml  pyproject.toml  rag_chain.py  requirements.txt  validate_key.py  vector_store_manager.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.streamlit/: config.toml  secrets.toml.example
config/: __init__.py  settings.py
data/: README.md
deployment/systemd/: README.md  rag-chatbot.service
docs/: DEPLOYMENT.md  OLLAMA_SETUP.md  SCRIPT_MANAGEMENT.md  SETUP.md  example_usage.py
scripts/: README.md  build.sh  clean.sh  deploy.sh  dev.sh  download_models.py  logs.sh  pull-ollama-models.sh  setup_ollama.sh  stop.sh  test_dynamic_embeddings.py  test_graphrag.py  test_ollama.py  verify_agent_graph.py  verify_safetensors.py
src/: __init__.py
src/backend/: celery_config.py  main.py  tasks.py
src/chatbot/: __init__.py
src/chatbot/core/: __init__.py  agent_graph.py  document_processor.py  event_bus.py  graph_store_manager.py  rag_chain.py  simple_graph_transformer.py  vector_store_manager.py
src/chatbot/utils/: __init__.py
tests/: reproduce_graph_error.py  test_event_bus.py  verify_deployment.py
