[project]
name = "poc-rag-chatbot-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu==1.8.0",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-huggingface==0.0.3",
    "langchain-ollama==0.1.0",
    "langchain-openai==0.1.23",
    "langchain-text-splitters==0.2.4",
    "pypdf==4.3.1",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.0.1",
    "streamlit==1.39.0",
    "redis>=5.0.0",
    "tiktoken==0.7.0",
    "torch==2.4.1",
    "transformers==4.44.2",
    "fastapi>=0.124.2",
    "uvicorn>=0.38.0",
    "celery>=5.6.0",
    "python-multipart>=0.0.20",
    "langgraph>=0.0.10",
    "fasttext-wheel>=0.9.2",
    "langchain-experimental>=0.0.60",
    "neo4j>=5.20.0",
    "json-repair>=0.25.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
